syntax = "proto3";

package lobbyClient;
import "protobuf-response.proto";
import "google/protobuf/wrappers.proto";
import "lobby-dto.proto";

option java_package = "org.dbs.mgmt.client";
option java_multiple_files = true;

service LobbyService {
  // Lobby
  rpc createOrUpdateLobby (CreateOrUpdateLobbyRequest) returns (org.dbs.protobuf.core.MainResponse) {}
  rpc updateLobbyStatus (UpdateLobbyStatusRequest) returns (org.dbs.protobuf.core.MainResponse) {}
}
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
